# heventure-search-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  README_CN.md  SKILL.md  __init__.py  auto_improve.sh  benchmark.py  benchmark_history.json  benchmark_report.py  improve_log_20260427.txt  latest_improve_report.txt  publish.py  pyproject.toml  quick_benchmark.py  requirements.txt  server.json  server.py  setup.py  smithery.yaml  test_server.py
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  manual-release.yml  publish-to-pypi.yml
improve_cycle/: status.json
improve_cycle/sessions/: 2026-04-29.md  2026-04-29b.md  2026-05-01.md  2026-05-02.md  2026-05-03.md  2026-05-04.md
promotion/: reddit-post.md  v2ex-post.md
publish_env/: pyvenv.cfg
scripts/: gh-issues.sh  gh_list.py  issue_triage.py  kanban_gh_bridge.py  kanban_github_sync.py  kanban_status.py  triage_and_sync.py  weekly_digest.py  write_run_log.py
tests/: __init__.py  test_server.py
