[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heventure-search-mcp"
version = "1.4.13"
description = "一个无需API key的网页搜索MCP服务器，支持DuckDuckGo、Google和必应搜索"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "HughesCuit"},
]
keywords = ["mcp", "search", "web", "duckduckgo", "bing", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0.0",
    "aiohttp>=3.8.0",
    "beautifulsoup4>=4.11.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
socks = ["aiohttp-socks>=0.8.4"]
tavily = ["tavily>=1.0.0"]
lxml-parser = ["lxml>=4.9.0"]

[project.urls]
Homepage = "https://github.com/HughesCuit/heventure-search-mcp"
Repository = "https://github.com/HughesCuit/heventure-search-mcp"
Issues = "https://github.com/HughesCuit/heventure-search-mcp/issues"
Documentation = "https://github.com/HughesCuit/heventure-search-mcp#readme"

[project.scripts]
heventure-search-mcp = "server:entry_point"

[tool.setuptools]
py-modules = ["server"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.json", "*.sh"]

[tool.pytest.ini_options]
markers = [
    "integration: 集成测试，需要真实网络访问",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
